--- a/src/ggrc/assets/assets.yaml
+++ b/src/ggrc/assets/assets.yaml
@@ -242,6 +242,7 @@ dashboard-js-template-files:
   - assessments/tree_header.mustache
   - assessments/tree_footer.mustache
   - assessments/tree_add_item.mustache
+  - assessments/tree_pagination.mustache
   - assessments/info.mustache
   - assessments/reusable_objects.mustache
   - assessments/header.mustache
